# mandlebrot

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: mesh.h  shader.h  shader_program.h
shaders/: mandle.glslf
src/: CMakeLists.txt  mandlebrot.cc  mesh.cc  shader.cc  shader_program.cc
